<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    >

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.example.ex2015_07_26.fragments.DisplayFragment"
        android:id="@+id/display_fragment" />
    <!--<TextView-->
        <!--android:id="@+id/display"-->
        <!--android:text=""-->
        <!--android:layout_width="180sp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="35sp"-->
        <!--/>-->

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton android:id="@+id/radio_bin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bin"
            />
        <RadioButton android:id="@+id/radio_oct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oct"
            />
        <RadioButton android:id="@+id/radio_dec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dec"
            android:checked="true"
            />
    </RadioGroup>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="20sp"
        android:id="@+id/progressBar"
        android:layout_margin="1sp" />
    
    <TableRow>

        <Button
            android:id="@+id/clearOneCharacter"
            android:layout_height="67sp"
            android:text="@string/clearOneCharacter"
            android:layout_weight="2"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/btnC"
            android:layout_height="67sp"
            android:text="@string/btnC"
            android:layout_weight="2"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/btnPlazOrMin"
            android:layout_height="67sp"
            android:text="@string/btnPlazOrMin"
            android:layout_weight="2"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/btnMult"
            android:layout_height="67sp"
            android:text="@string/btnMult"
            android:layout_weight="2"
            android:textSize="25sp"
            />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btn7"
            android:layout_height="67sp"
            android:text="@string/btn7"
            android:layout_weight="2"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/btn8"
            android:layout_height="67sp"
            android:text="@string/btn8"
            android:layout_weight="2"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/btn9"
            android:layout_height="67sp"
            android:text="@string/btn9"
            android:layout_weight="2"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/btnDiv"
            android:layout_height="67sp"
            android:text="@string/btnDiv"
            android:layout_weight="2"
            android:textSize="25sp"
            />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btn4"
            android:layout_height="67sp"
            android:text="@string/btn4"
            android:layout_weight="2"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/btn5"
            android:layout_height="67sp"
            android:text="@string/btn5"
            android:layout_weight="2"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/btn6"
            android:layout_height="67sp"
            android:text="@string/btn6"
            android:layout_weight="2"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/btnPlus"
            android:layout_height="67sp"
            android:text="@string/btnPlus"
            android:layout_weight="2"
            android:textSize="25sp"
            />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btn1"
            android:layout_height="67sp"
            android:text="@string/btn1"
            android:layout_weight="2"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/btn2"
            android:layout_height="67sp"
            android:text="@string/btn2"
            android:layout_weight="2"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/btn3"
            android:layout_height="67sp"
            android:text="@string/btn3"
            android:layout_weight="2"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/btnMin"
            android:layout_height="67sp"
            android:text="@string/btnMin"
            android:layout_weight="2"
            android:textSize="25sp"
            />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btnComa"
            android:layout_height="67sp"
            android:text="@string/btnComa"
            android:layout_weight="2"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/btn0"
            android:layout_height="67sp"
            android:text="@string/btn0"
            android:layout_weight="2"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/btnSqrt"
            android:layout_height="67sp"
            android:text="@string/btnSqrt"
            android:layout_weight="2"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/btnResult"
            android:layout_height="67sp"
            android:text="@string/btnResult"
            android:layout_weight="2"
            android:textSize="25sp"
            />
    </TableRow>

</TableLayout>